environments/dev/services/scoringmp/base/config/deployment.yaml
---
# Source: scoringmp/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "scoringmp-deployment"
  labels:
    chart: 'scoringmp-1.0.0'
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: "scoringmp-selector"
  template:
    metadata:
      labels:
        app: "scoringmp-selector"
        version: "current"
    spec:
      serviceAccountName: kcontainer-runtime
      containers:
      - name: "scoringmp"
        image: "ibmcase/kcontainer-scoringmp-ms:0.1.46"
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 20
        resources:
          requests:
            cpu: "200m"
            memory: "300Mi"
        volumeMounts:
          - mountPath: "/opt/ol/wlp/usr/servers/defaultServer/bootstrap.properties"
            subPath: "bootstrap.properties"
            name: openliberty-bootstrap
            readOnly: true
      volumes:
        - name: openliberty-bootstrap
          secret:
            secretName: "openliberty-bootstrap"
