environments/dev/services/scoringmp/base/config/route.yaml
---
# Source: scoringmp/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  #TODO Add default name overrides?
  name: kcontainer-scoringmp
  labels:
    chart: 'scoringmp-1.0.0'
spec:
  # Not a required attribute but ArgoCD fails sync without this field included in the YAML
  # host: kcontainer-scoringmp-[project].[cluster-domain]
  path: /
  to:
    kind: Service
    name: "scoringmp-service"
    weight: 100
  port:
    targetPort: http
# Not a required attribute but ArgoCD fails sync without this field included in the YAML
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
    # host: kcontainer-scoringmp-[project].[cluster-domain]
    routerName: default
    wildcardPolicy: None
